--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,11 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: rgb(244, 234, 255);
+  background-color: #eee;
 }
 
 h1 {
   font-size: 52px;
-  color: rgb(88, 49, 196);
+  color: #272722;
 }
 
 header {
@@ -17,7 +17,7 @@ header img {
 }
 
 main {
-  background-color: rgb(122, 74, 218);
+  background-color: #272722;
   padding: 32px;
   margin: 32px auto;
   width: 700px;
@@ -39,15 +39,15 @@ li {
 
 a:not(.logo) {
   text-decoration: none;
-  color: rgb(36, 3, 102);
-  background-color: rgb(255, 237, 177);
-  padding: 2px 6px;
+  color: #161616;
+  background-color: #ffd138;
+  padding: 5px 7px;
   border-radius: 4px;
 }
 
 a:not(.logo):hover,
 a:not(.logo):active {
-  background-color: rgb(250, 201, 39);
+  background-color: #ffde70;
 }
 
 footer {
@@ -56,7 +56,7 @@ footer {
 }
 
 footer p {
-  color: rgb(131, 113, 149);
+  color: #575757;
   margin-top: 30px;
 }
 
@@ -123,4 +123,30 @@ footer a:active {
 .logo-txt span {
   font-weight: lighter;
   font-size: 0.85rem;
+}
+
+.icon {
+  width: 10rem;
+  display: block;
+  position: relative;
+  margin: auto;
+}
+
+::-webkit-scrollbar {
+  height: 9px;
+  width: 9px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #bdbdbd;
+  width: 9px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  width: 9px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
